syntax = "proto3";

package trento.checks.v1;
option go_package = "/;events";

message FactRequest {
    string check_id = 1;
    string name = 2;
    string gatherer = 3;
    string argument = 4;
}

message FactsGatheringRequestedTarget {
    string agent_id = 1;
    repeated FactRequest fact_requests = 2;
}

message FactsGatheringRequested {
    string execution_id = 1;
    string group_id = 2;
    repeated FactsGatheringRequestedTarget targets = 3;
}
